--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ h5,
 h6 {
   font-family: "Playfair Display", serif;
   margin-bottom: 1em;
+  color: firebrick
 }
 
 nav {
@@ -39,7 +40,7 @@ nav a {
 
 nav a:hover,
 nav a:active {
-  color: tomato;
+  color: firebrick;
   border-bottom: 2px solid tomato;
 }
 
@@ -56,7 +57,7 @@ nav a:active {
 }
 
 #home {
-  background-color: cornsilk;
+  background-color: firebrick;
 }
 
 #about img {
